[package]
name = "rumqtt"
description = "Mqtt client for your IOT needs"
version = "0.30.1"
authors = ["raviteja <mail@raviteja.tech"]
documentation = "https://docs.rs/rumqtt"
edition = "2018"
license = "Unlicense"

[dependencies]
tokio = "^0.1.9"
tokio-timer = "0.2.7"
tokio-io = "0.1"
tokio-codec = "0.1"
bytes = "0.4"
futures = "0.1"
crossbeam-channel = "0.3"
log = "0.4"
failure = "0.1"
derive_more = "0.13"
base64 = "0.10"
uuid = {version = "0.7", features = ["serde", "v4"]}
pretty_env_logger = "0.2"
mqtt311 = "0.2"

[dependencies.native-tls]
version = "0.2"
optional = true

[dependencies.tokio-tls]
version = "0.2"
optional = true

[dependencies.tokio-rustls]
version = "0.8"
optional = true

[dependencies.webpki]
version = "0.18"
optional = true

[dependencies.jsonwebtoken]
version = "5.0.1"
optional = true

[dependencies.chrono]
version = "0.4"
optional = true

[dependencies.serde]
version = "1"
optional = true

[dependencies.serde_derive]
version = "1"
optional = true

[dev-dependencies]
envy = "0.3"
serde = "1"
serde_derive = "1"
base64 = "0.10"

[features]
default = ["rustls", "jwt"]
acknotify = []
rustls = ["tokio-rustls", "webpki"]
jwt = ["jsonwebtoken", "chrono", "serde", "serde_derive"]
nativetls = ["native-tls", "tokio-tls"]
