[package]
name = "rumqtt"
description = "Mqtt client for your IOT needs"
version = "0.31.0"
authors = ["raviteja <kraviteza@gmail.com"]
documentation = "https://docs.rs/rumqtt"
repository = "https://github.com/AtherEnergy/rumqtt"
edition = "2018"
license = "Unlicense"

[dependencies]
tokio = { version = "0.2.6", features = [ "io-util", "stream", "sync", "rt-threaded", "tcp", "time" ], default-features = false }
bytes = "0.5"
futures = "0.3.1"
log = "0.4"
failure = "0.1"
derive_more = "0.99"
base64 = "0.11"
uuid = {version = "0.8", features = ["serde", "v4"]}
mqtt311 = { git = "https://github.com/vivint-smarthome/mqtt311", branch = "update-deps", version = "0.2.0" }
tokio-rustls = "0.12"
tokio-util = { version = "0.2.0", features = ["codec"] }
webpki = "0.21"
rental = "0.5.5"
stable_deref_trait = "1.1.1"

[dependencies.jsonwebtoken]
version = "7.0.0-alpha.2"
optional = true

[dependencies.chrono]
version = "0.4"
optional = true

[dependencies.serde]
version = "1"
optional = true

[dependencies.serde_derive]
version = "1"
optional = true

[target.'cfg(test)'.dependencies]
tokio = { version = "0.2.6", features = [ "macros", "stream" ] }

[dev-dependencies]
envy = "0.3"
futures = "0.3.1"
serde = "1"
serde_derive = "1"
tokio = { version = "0.2.6", features = [ "macros" ], default-features = false }
pretty_env_logger = "0.3"

[features]
default = ["jwt"]
acknotify = []
jwt = ["jsonwebtoken", "chrono", "serde", "serde_derive"]
